' Generated by UML Generator
' Encoded: fLNHQi8m57tlL-InJWjxBaEKoK3GJT2tiOUOPXgM9f94XtF--vAcQPDKPMmlGc_EERVtt6CwaWeAjIzf8Zy8sq41Iu0eb7Aib23hlS9JnDcIV65mdsn9WG4Y0b6S91KAJCY6A4WNWXVWb02GKO8mapW7Iyrd6rEIcZrbytKEtYc7ofGo_TFtk2c3PSCPW9tGAZLy02B90OW4UqPiWzNCujAUrzpKbpNS7BWtwCiM7-bhr86JeWOrvBXfYrBS4iF625AqC7EqRS_EjKTAC5FMC7zoyrn2GlrdM1G2I-cNAlUiHcISJnw0YEfyUjQKZabppUmKnrOWhCjQmUySUbPf-QyI7ZlL-FLkEggzWskf14JA1XIOtEpH5HVz13MMrOmRORjfKRJDNrbXEK6B_mJdHHHOs8bHjV-ypfATkHfF6peZKZtKqmwRyIjo6l9wrmwCBnVbAePUdJEpXgsuNclkbk8DQSPPSVq_3vtRyi_blYoXE8PBjdFg1B5gpFv9Nr2AeBE9DakXs3HvUNrpNHhQOdkK1FdNKO4fEM1nVCBTD7ZWc_TFLyF5PDAUnBdmZou8_2q4_csRPTz3PtTYSt6NPIuEji1rmK42RmBo2BD2Vm5-00
' URL: http://www.plantuml.com/plantuml/uml/fLNHQi8m57tlL-InJWjxBaEKoK3GJT2tiOUOPXgM9f94XtF--vAcQPDKPMmlGc_EERVtt6CwaWeAjIzf8Zy8sq41Iu0eb7Aib23hlS9JnDcIV65mdsn9WG4Y0b6S91KAJCY6A4WNWXVWb02GKO8mapW7Iyrd6rEIcZrbytKEtYc7ofGo_TFtk2c3PSCPW9tGAZLy02B90OW4UqPiWzNCujAUrzpKbpNS7BWtwCiM7-bhr86JeWOrvBXfYrBS4iF625AqC7EqRS_EjKTAC5FMC7zoyrn2GlrdM1G2I-cNAlUiHcISJnw0YEfyUjQKZabppUmKnrOWhCjQmUySUbPf-QyI7ZlL-FLkEggzWskf14JA1XIOtEpH5HVz13MMrOmRORjfKRJDNrbXEK6B_mJdHHHOs8bHjV-ypfATkHfF6peZKZtKqmwRyIjo6l9wrmwCBnVbAePUdJEpXgsuNclkbk8DQSPPSVq_3vtRyi_blYoXE8PBjdFg1B5gpFv9Nr2AeBE9DakXs3HvUNrpNHhQOdkK1FdNKO4fEM1nVCBTD7ZWc_TFLyF5PDAUnBdmZou8_2q4_csRPTz3PtTYSt6NPIuEji1rmK42RmBo2BD2Vm5-00
' Generated on: 2025-11-30T06:23:37.265563891

@startuml
skinparam classAttributeIconSize 0
hide circle

class DigitalProd {
  -license: String
  -sizeInMb: float
  --
  +DigitalProd(name: String, price: float, license: String, sizeInMb: float)
  +getLicense(): String
  +getSizeInMb(): float
  +setLicense(license: String): void
  +setSizeInMb(sizeInMb: float): void
  +toString(): String
  +calcPrice(): float
}

class Client {
  -name: String
  -mail: String
  -address: String
  --
  +Client(name: String, mail: String, address: String)
  +getName(): String
  +getMail(): String
  +getAddress(): String
  +setName(name: String): void
  +setMail(mail: String): void
  +setAddress(address: String): void
  +toString(): String
}

abstract class Product {
  -name: String
  -price: float
  --
  +Product(name: String, price: float)
  +getName(): String
  +getPrice(): float
  +setName(name: String): void
  +setPrice(price: float): void
  +toString(): String
  +calcPrice(): float
}

class Order {
  -client: Client
  -products: List<Product>
  --
  +Order(client: Client)
  +Order(client: Client, products: List<Product>)
  +addProduct(productToAdd: Product): void
  +calcTotal(): float
  +showSummary(): String
}

class Main {
  +{static} main(args: String[]): void
}

class PhysicalProd {
  -deliveryFee: float
  --
  +PhysicalProd(name: String, price: float, deliveryFee: float)
  +getDeliveryFee(): float
  +setDeliveryFee(deliveryFee: float): void
  +toString(): String
  +calcPrice(): float
}

DigitalProd --|> Product
Order *-- Client
Order o-- Product
PhysicalProd --|> Product
@enduml